--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mkdocs
-        pip install mkdocs-material  # If you use the Material theme or other extensions
+        pip install mkdocs-bootstrap  # If you use the Material theme or other extensions
 
     - name: Build MkDocs site
       run: mkdocs build
