--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,12 @@
 site_name: ScriptBlocks
 theme:
-  name: bootstrap
-repo_url: https://github.com/ScriptBlocks/ScriptBlocks
+  name: material
+  logo: assets/logo.png
+repo_url: https://github.com/OmgRod/ScriptBlocks-Docs
 
 nav:
   - Home: index.md
   - Volume 1 - Getting Started:
-    - Installation: volume1/installing.md
-  - Creating Sprites: creating-sprites.md
+    - Installation: vol1/installing.md
+  - Volume 2 - Tutorials:
+    - Creating Sprites: vol2/creating-sprites.md
